knocking it down

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,4 @@
-.nav-text{
-    color: turquoise;
-    font-size: 24px;
+body {
+    background-image: url(https://ksuowls.com/common/controls/image_handler.aspx?thumb_id=0&image_path=/images/2017/2/9/1920x1080KSU.jpg);
+    
 }
