--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,3 @@
-body {
-    background-image: url(https://ksuowls.com/common/controls/image_handler.aspx?thumb_id=0&image_path=/images/2017/2/9/1920x1080KSU.jpg);
-    
+h1 {
+    margin-bottom: 5rem;
 }
