--- a/assets/style.css
+++ b/assets/style.css
@@ -6,3 +6,8 @@ h1 {
     margin-bottom: 2.5rem;
     margin-top: 2.5rem;
 }
+
+#contacthead {
+    text-align: center;
+    font-family:'Bangers', cursive;
+}
