added the footer, still cant find the subrow on homeopage

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,3 +11,21 @@ h1 {
     text-align: center;
     font-family:'Bangers', cursive;
 }
+
+ul.footer {
+        margin-top: 10px;
+        text-align: center;
+}
+      
+ul.footer li {
+        color: #333;
+        display: inline-block;
+}
+      
+#footer {
+        bottom: -50px;
+        height: 50px;
+        left: 0;
+        position: absolute;
+        right: 0;
+}
